--- a/graphUI.html
+++ b/graphUI.html
@@ -16,18 +16,13 @@
       function drawChart() {
 
         // Create the data table.
-        var data = new google.visualization.DataTable();
-        var data = google.visualization.arrayToDataTable([
-          ['Year', 'Sales', 'Expenses'],
-          ['2004',  1000,      400],
-          ['2005',  1170,      460],
-          ['2006',  660,       1120],
-          ['2007',  1030,      540]
-        ]);
+        $.get("/ajax/"+String(wat),function(dataTable){
+          var data = new google.visualization.DataTable();
+        var data = google.visualization.arrayToDataTable(dataTable);
 
         var options = {
           title: 'Company Performance',
-          curveType: 'function',
+          curveType: 'none',
           legend: { position: 'bottom' }
         };
 
@@ -35,6 +30,8 @@
 
         // Instantiate and draw our chart, passing in some options.
         chart.draw(data, options);
+       });
+        
       }
     </script>
   </head>
