--- a/graphUI.html
+++ b/graphUI.html
@@ -1,6 +1,13 @@
 <html>
   <head>
+
+  </head>
+
+  <body>
+    <!--Div that will hold the pie chart-->
+    <div id="chart_div"></div>
     <!--Load the AJAX API-->
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
 
@@ -34,10 +41,5 @@
         
       }
     </script>
-  </head>
-
-  <body>
-    <!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
   </body>
 </html>
