--- a/graphUI.html
+++ b/graphUI.html
@@ -10,7 +10,17 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-
+      function getQueryVariable(variable)
+{
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
+var wat = getQueryVariable("id");
       // Load the Visualization API and the corechart package.
       google.charts.load('current', {'packages':['corechart']});
 
