--- a/graphUI.html
+++ b/graphUI.html
@@ -10,6 +10,10 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+      /**
+       * @param  {String} variable - name of GET variable that you want
+       * @return {String} Value of the specified variable
+       */
       function getQueryVariable(variable)
 {
        var query = window.location.search.substring(1);
@@ -20,6 +24,7 @@
        }
        return(false);
 }
+
       var wat = getQueryVariable("id");
       // Load the Visualization API and the corechart package.
       google.charts.load('current', {'packages':['corechart']});
@@ -27,9 +32,6 @@
       // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart);
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
       function drawChart() {
         console.log("here!!");
         // Create the data table.
@@ -39,7 +41,7 @@
         var data = google.visualization.arrayToDataTable(dataTable);
 
         var options = {
-          title: 'Company Performance',
+          title: 'Consumption information for Wat ' + wat,
           curveType: 'none',
           legend: { position: 'bottom' }
         };
