--- a/graphUI.html
+++ b/graphUI.html
@@ -42,7 +42,7 @@
        
       $.get("/grajax/"+String(wat)+"/"+String(detail),function(dataTable){
           console.log(dataTable);
-        var data = google.visualization.arrayToDataTable(dataTable);*/
+        var data = google.visualization.arrayToDataTable(dataTable);
 
         
 
