--- a/graphUI.html
+++ b/graphUI.html
@@ -42,9 +42,8 @@
        
       $.get("/grajax/"+String(wat)+"/"+String(detail),function(dataTable){
           console.log(dataTable);
+          console.log(dataTable.rows[0].c[0].v.getTime());
         var data = new google.visualization.DataTable(dataTable);
-
-        
 
 
         var options = {
