--- a/graphUI.html
+++ b/graphUI.html
@@ -42,7 +42,7 @@
        
       $.get("/grajax/"+String(wat)+"/"+String(detail),function(dataTable){
           console.log(dataTable);
-          console.log(dataTable.rows[0].c[0].v.getTime());
+       //   console.log(dataTable.rows[0].c[0].v.getTime());
         var data = new google.visualization.DataTable(dataTable);
 
 
