--- a/graphUI.html
+++ b/graphUI.html
@@ -27,6 +27,8 @@
 
       var wat = getQueryVariable("id");
       var detail = getQueryVariable("detail");
+      //0 for power,1 for current, 2 for voltage
+      var lazy = getQueryVariable("type");
       // Load the Visualization API and the corechart package.
       google.charts.load('current', {'packages':['corechart']});
 
@@ -44,7 +46,12 @@
           console.log(dataTable);
        //   console.log(dataTable.rows[0].c[0].v.getTime());
         var data = new google.visualization.DataTable(dataTable);
-
+        if(lazy==0)
+          data.hideColumns([1,2]);
+        if(lazy==1)
+          data.hideColumns([0,2]);
+        if(lazy==2)
+          data.hideColumns([1,2]);
 
         var options = {
           title: 'Consumption information for Wat ' + wat,
