--- a/graphUI.html
+++ b/graphUI.html
@@ -59,7 +59,7 @@
           title: 'Consumption information for Wat ' + wat,
           curveType: 'none',
           legend: { position: 'bottom' },
-          hAxis{
+          hAxis:{
             title:"Time",
             gridlines:{count:21}
           }
