--- a/graphUI.html
+++ b/graphUI.html
@@ -30,7 +30,7 @@
       //0 for power,1 for current, 2 for voltage
       var lazy = getQueryVariable("type");
       // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['line']});
+      google.charts.load('current', {'packages':['corechart']});
 
       // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart);
@@ -65,7 +65,7 @@
           }
         };
 
-        var chart = new google.visualization.Line(document.getElementById('chart_div'));
+        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 
         // Instantiate and draw our chart, passing in some options.
         chart.draw(view, options);
