--- a/graphUI.html
+++ b/graphUI.html
@@ -89,7 +89,16 @@ function drawVisualization() {
   wrapper = new google.visualization.ChartWrapper({
     chartType: 'LineChart',
     dataSourceURL:"/grajax/"+String(wat)+"/"+String(detail),
-    options: {'title': 'Power Consumption of Wat '+String(wat)},
+    options: {
+          title: 'Consumption information for Wat ' + wat
+          ,curveType: 'function'
+          ,legend: { position: 'bottom' }
+          ,pointSize:5
+          ,hAxis:{
+            title:"Time",
+            gridlines:{count:21}
+          }
+        },
     containerId: 'chart_div'
   });
 
