--- a/graphUI.html
+++ b/graphUI.html
@@ -42,7 +42,7 @@
       google.charts.load('current', {'packages':['corechart']});
 
       // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+      google.charts.setOnLoadCallback(drawVisualization);
 
       /*
       function drawChart() {
