--- a/graphUI.html
+++ b/graphUI.html
@@ -109,13 +109,13 @@ function drawVisualization() {
 var updateType = function(type){
   wrapper.setDataSourceUrl("/grajax/"+String(wat)+"/"+String(type));
   if(type==0){
-    wrapper.setOption("title":"Wat " + wat + " Power Consumption");
+    wrapper.setOption("title","Wat " + wat + " Power Consumption");
   }
   if(type==1){
-    wrapper.setOption("title":"Wat " + wat + " Current Consumption");
+    wrapper.setOption("title","Wat " + wat + " Current Consumption");
   }
   if(type==2){
-    wrapper.setOption("title":"Wat " + wat + " Voltage Consumption");
+    wrapper.setOption("title","Wat " + wat + " Voltage Consumption");
   }
   wrapper.draw();
 }
