Here goes the chart wrapper

--- a/graphUI.html
+++ b/graphUI.html
@@ -104,15 +104,15 @@ var update = function(){
   //wrapper.setDataSourceUrl("/grajax/"+String(wat)+"/"+String(detail));
   if(type==0){
     wrapper.setOption("title","Wat " + wat + " Power Consumption");
-    wrapper.setView({"view":{"columns":[0,1]}});
+    wrapper.setView({"columns":[0,1]});
   }
   if(type==1){
     wrapper.setOption("title","Wat " + wat + " Current Consumption");
-    wrapper.setView({"view":{"columns":[0,2]}});
+    wrapper.setView({"columns":[0,2]});
   }
   if(type==2){
     wrapper.setOption("title","Wat " + wat + " Voltage Consumption");
-    wrapper.setView({"view":{"columns":[0,3]}});
+    wrapper.setView({"columns":[0,3]});
   }
   
 
