some ui enhancements

--- a/graphUI.html
+++ b/graphUI.html
@@ -3,16 +3,16 @@
 
   </head>
 
-  <body>
+  <body style="width:85%">
     <!--Div that will hold the pie chart-->
-    <select id="valsel" style="float:right;position:relative">
+    <select id="valsel" style="float:right;position:relative;z-index:3;">
     <option value="0">Power</option>
     <option value="1">Current</option>
     <option value="2">Voltage</option>
     </select>
     <div id="chart_div"></div>
 
-    <div style="width:30%; margin:auto">
+    <div style="width:25%; margin:auto">
     <button id="decten">&lt&lt</button>
     <button id="decone">&lt</button>
     <button id="incone">&gt</button>
