some ui enhancements

--- a/graphUI.html
+++ b/graphUI.html
@@ -107,7 +107,10 @@ function drawVisualization() {
           ,legend: { position: 'bottom' }
           ,pointSize:2
           ,hAxis:{
-            title:"Time",
+            title:"Time"
+            ,gridlines:{count:21}
+          }
+          ,vAxis{
             gridlines:{count:21}
           }
         },
