some ui enhancements

--- a/graphUI.html
+++ b/graphUI.html
@@ -110,7 +110,7 @@ function drawVisualization() {
             title:"Time"
             ,gridlines:{count:21}
           }
-          ,vAxis{
+          ,vAxis:{
             gridlines:{count:21}
           }
         },
