abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -102,7 +102,7 @@ function drawVisualization() {
   wrapper = new google.visualization.ChartWrapper({
     chartType: 'LineChart',
     options: {
-          title: "title","Wat " + wat + " Power Consumption"
+          title: "Wat " + wat + " Power Consumption"
           ,curveType: 'none'
           ,legend: { position: 'bottom' }
           ,pointSize:2
