abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -45,6 +45,8 @@ var update = function(){
     wrapperb.setDataTable(dataTable);
     wrapperb.setDataTable(dataTable);
     wrapper.draw();
+    wrapperb.draw();
+    wrapperc.draw();
   }
   );
 }
