abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -125,8 +125,8 @@ function drawVisualization() {
   wrapperc.setView({"columns":[0,3]});
   wrapperb.setOption("title","Wat " + wat + " Current Consumption");
   wrapperc.setOption("title","Wat " + wat + " Voltage Consumption");
-  wrapperb.setOption("vAxis","{'title':'Current(Amps)'}");
-  wrapperc.setOption("vAxis","{'title':'Voltage(Volts)'}");
+  wrapperb.setOption("vAxis",{'title':'Current(Amps)'});
+  wrapperc.setOption("vAxis",{'title':'Voltage(Volts)'});
   wrapperb.setContainerId("cur_div");
   wrapperc.setContainerId("volt_div");
 
