abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -43,7 +43,7 @@ var update = function(){
   $.get("/grajax/"+String(wat)+"/"+String(detail),function(dataTable){
     wrapper.setDataTable(dataTable);
     wrapperb.setDataTable(dataTable);
-    wrapperb.setDataTable(dataTable);
+    wrapperc.setDataTable(dataTable);
     wrapper.draw();
     wrapperb.draw();
     wrapperc.draw();
