abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -124,7 +124,7 @@ function drawVisualization() {
   wrapperb.setView({"columns":[0,2]});
   wrapperc.setView({"columns":[0,3]});
   wrapperb.setOption("title","Wat " + wat + " Current Consumption");
-  wrapperc.setOption("title","Wat " + wat + " Voltage Consumption");
+  //wrapperc.setOption("title","Wat " + wat + " Voltage Consumption");
   wrapperb.setOption("vAxis",{'title':'Current(Amps)'});
   wrapperc.setOption("vAxis",{'title':'Voltage(Volts)'});
   wrapperb.setContainerId("cur_div");
