abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -147,7 +147,7 @@ function drawVisualization() {
             ,gridlines:{count:21}
           }
           ,vAxis:{
-            title:"Power(Watts)"
+            title:"Power(Watts)",'minValue':-1,'maxValue':20
           }
         },
     containerId: 'chart_div'
@@ -157,8 +157,8 @@ function drawVisualization() {
   wrapperc.setView({"columns":[0,3]});
   wrapperb.setOption("title","Wat " + wat + " Current Consumption");
   //wrapperc.setOption("title","Wat " + wat + " Voltage Consumption");
-  wrapperb.setOption("vAxis",{'title':'Current(Amps)'});
-  wrapperc.setOption("vAxis",{'title':'Voltage(Volts)'});
+  wrapperb.setOption("vAxis",{'title':'Current(Amps)','minValue':-.1,'maxValue':3});
+  wrapperc.setOption("vAxis",{'title':'Voltage(Volts)','minValue':-5,'maxValue':140});
   wrapperb.setContainerId("cur_div");
   wrapperc.setContainerId("volt_div");
 
