--- a/graphUI.html
+++ b/graphUI.html
@@ -113,7 +113,7 @@ function drawVisualization() {
             ,gridlines:{count:21}
           }
           ,vAxis:{
-            title:"Power(Watts)"
+            {'title':'Power(Watts)','minValue':-.5,'maxValue':20}
           }
         },
     containerId: 'chart_div'
@@ -130,7 +130,7 @@ function drawVisualization() {
             ,gridlines:{count:21}
           }
           ,vAxis:{
-            title:"Power(Watts)"
+            {'title':'Current(Amps)','minValue':-.1,'maxValue':3}
           }
         },
     containerId: 'chart_div'
@@ -146,19 +146,13 @@ function drawVisualization() {
             title:"Time"
             ,gridlines:{count:21}
           }
-          ,vAxis:{
-            title:"Power(Watts)",'minValue':-1,'maxValue':20
-          }
+          ,vAxis:{'title':'Voltage(Volts)','minValue':-5,'maxValue':140}
         },
     containerId: 'chart_div'
   });
   wrapper.setView({"columns":[0,1]});
   wrapperb.setView({"columns":[0,2]});
   wrapperc.setView({"columns":[0,3]});
-  wrapperb.setOption("title","Wat " + wat + " Current Consumption");
-  //wrapperc.setOption("title","Wat " + wat + " Voltage Consumption");
-  wrapperb.setOption("vAxis",{'title':'Current(Amps)','minValue':-.1,'maxValue':3});
-  wrapperc.setOption("vAxis",{'title':'Voltage(Volts)','minValue':-5,'maxValue':140});
   wrapperb.setContainerId("cur_div");
   wrapperc.setContainerId("volt_div");
 
