abdullahs stupid suggestions

--- a/graphUI.html
+++ b/graphUI.html
@@ -113,7 +113,7 @@ function drawVisualization() {
             ,gridlines:{count:21}
           }
           ,vAxis:{
-            {'title':'Power(Watts)','minValue':-.5,'maxValue':20}
+            'title':'Power(Watts)','minValue':-.5,'maxValue':20
           }
         },
     containerId: 'chart_div'
@@ -130,7 +130,7 @@ function drawVisualization() {
             ,gridlines:{count:21}
           }
           ,vAxis:{
-            {'title':'Current(Amps)','minValue':-.1,'maxValue':3}
+            'title':'Current(Amps)','minValue':-.1,'maxValue':3
           }
         },
     containerId: 'chart_div'
