--- a/graphUI.html
+++ b/graphUI.html
@@ -6,6 +6,7 @@
     <!--Div that will hold the pie chart-->
     <div id="container" style="float:right;position:relative;z-index:3;">
     <div id="consumption">0 kWh</div>
+    <div id="powpow"></div>
     </div>
     <div id="chart_div"></div>
     <div id="cur_div"></div>
@@ -17,6 +18,12 @@
     <button id="incone">&gt</button>
     <button id="incten">&gt&gt</button>
     </div>
+    <style>
+#container{
+  font-size:2.5em;
+  font-style:bold;
+}
+    </style>
     <!--Load the AJAX API-->
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -29,7 +36,6 @@ var updateConsumption = function(){
     var x = data.split(" ");
     var pow = Number(x[0]);
     var t = Number(x[3]);
-    console.log(pow,t);
     if(lastTime==0){
       lastTime = t;
     }
@@ -37,16 +43,17 @@ var updateConsumption = function(){
       consumption+=(t-lastTime)*pow/(1000*60*60);
       lastTime = t;
       $("#consumption").html(consumption + " kWh");
+      $("#powpow").html(pow+ " Watts");
     }
 });
 }
 var update = function(){
 
   $.get("/grajax/"+String(wat)+"/"+String(detail),function(dataTable){
-    /*var t = dataTable.rows[0].c;
+    var t = dataTable.rows[0].c;
     if(lastTime==0)
       lastTime=t[0].v;
-    console.log(eval("new "+lastTime).getTime());*/
+    console.log(eval("new "+lastTime).getTime());
     wrapper.setDataTable(dataTable);
     wrapperb.setDataTable(dataTable);
     wrapperc.setDataTable(dataTable);
