--- a/graphUI.html
+++ b/graphUI.html
@@ -42,6 +42,7 @@ var updateConsumption = function(){
       lastTime = t;
     }
     else{
+      console.log(t,lastTime,pow);
       consumption+=(t-lastTime)*pow/(1000*60*60);
       lastTime = t;
       $("#consumption").html(consumption + " kWh");
